<resources>
    <string name="app_name">TripPlanner</string>
    <string name="trip_name">Trip Name</string>
    <string name="city_name">City Name</string>
    <string name="trip_name_hint">Enter Trip Name</string>
    <string name="nofdays">NUMBER OF DAYS</string>
    <string name="duration">DURATION</string>
    <string name="startdate">Start Date</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="enddate">End Date</string>
    <string name="currentdate">Current Date</string>
    <string name="plan">LETS GO PLAN!!!!!</string>
    <string name="day">Day Of Trip</string>
    <string name="days">Days</string>
    <string name="timeofday">Time Of Day</string>
    <string name="save">SAVE</string>
    <string name="places">Points Of Interest</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Name</string>
    <string name="vicinity">Vivinity</string>
    <string name="open">Open</string>
    <string name="rating">Rating</string>
    <string name="showon_map">Show On Map</string>
    <string name="add_data">Add Data</string>
    <string name="view_data">View Data</string>
    <string name="update_data">Update Data</string>
    <string name="del_data">Del Data</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="place_museum">Museum</string>
    <string name="place_beaches">Beaches</string>
    <string name="place_airport">Airport</string>
    <string name="place_zoo">Zoo</string>
    <string name="del_all_data">Del ALl</string>
    <string name="enter_city_hint">Enter City Here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transition_name">ListToDetails</string>
    <string name="schedule_trip">Schedule Trip</string>
    <string name="place_type">Place Type</string>
    <string name="place_one">Place One</string>
    <string name="place_two">Place Two</string>
    <string name="place_three">Place Three</string>
    <string name="place_four">Place Four</string>
    <string name="place_restaurant">Restaurant</string>
    <string name="place_attractions">Attractions</string>
    <string name="set">Set</string>
    <string name="reset">Reset</string>
</resources>
