<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_planner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:orientation="vertical"
    tools:context="com.ashweeza.tripplanner.PlannerActivity">

    <!--<TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Select City"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />
-->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edittxt">

        <AutoCompleteTextView
            android:id="@+id/placeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/enter_city_hint"
            android:padding="10dp">

            <requestFocus />
        </AutoCompleteTextView>

        <Button
            android:id="@+id/clearbt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mr_ic_close_light" />

    </TableRow>

    <Button
        android:id="@+id/showselectedplacesbtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/schedule_trip" />

    <!--   <View
           android:layout_width="match_parent"
           android:layout_height="2dp"
           android:background="#000000" />-->
    <!--
        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:elevation="12dp"
            android:verticalSpacing="1dp"
            android:gravity="center"
            android:numColumns="2" />-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scrollbars="vertical" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:gravity="center"
        android:text="@string/place_type"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <ListView
        android:id="@+id/data_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:divider="#000000"
        android:dividerHeight="1dp" />
</LinearLayout>
